# train_mnist_on_cpu

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  format_code.sh  pyproject.toml
train_mnist_on_cpu/: config.py  main.py  mnist_dataset.py  models.py  tmp.ipynb  train.py  utils.py  visualize.py
