[tool.poetry]
name = "train-mnist-on-cpu"
version = "0.1.0"
description = "Train MNIST on CPU, end to end process including docker & aws vm. ToDO: After training later we will deploy the model on aws vm."
authors = ["Sualeh Qureshi <sualeh.qureshi@tomtom.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
torch-summary = "^1.4.5"
matplotlib = "^3.10.3"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
